F# Windows Forms project template

--- a/MonoDevelop.FSharpBinding/templates/FSharpTutorialProject.xpt.xml
+++ b/MonoDevelop.FSharpBinding/templates/FSharpTutorialProject.xpt.xml
@@ -1,6 +1,5 @@
-
 ﻿<?xml version="1.0"?>
-<Template Originator="Community" Created="28/3/2012">
+<Template Originator="Ihor Sihuta" Created="28/3/2012">
 
   <!-- Template Header -->
   <TemplateConfiguration>
