--- a/MonoDevelop.FSharpBinding/templates/FSharpGtkProject.xpt.xml
+++ b/MonoDevelop.FSharpBinding/templates/FSharpGtkProject.xpt.xml
@@ -14,7 +14,7 @@
 		<Open filename="Program.fs" />
 	</Actions>
 	
-	<Combine name="${ProjectName}" direectory=".">
+	<Combine name="${ProjectName}" directory=".">
 		<Options>
 			<StartupProject>${ProjectName}</StartupProject>
 		</Options>
@@ -94,15 +94,26 @@ namespace ${Namespace}
 				<FileTemplateReference TemplateID="CSharpAssemblyInfo" name="AssemblyInfo.cs" />
 			</Files>
 		</Project>
-		<Project name="${ProjectName}.Logic" directory=".">
-			<Options target="Library" language = "F#" />
+		<Project name="${ProjectName}.Logic" directory="${ProjectName}.Logic">
+			<Options>
+                <Target>Library</Target>
+                <Language>F#</Language>
+            </Options>
 			<References>
 				<Reference type="Gac" refto="System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
 				<Reference type="Gac" refto="FSharp.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+				<Reference type="Package" SpecificVersion="false" refto="gtk-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+				<Reference type="Package" SpecificVersion="false" refto="gdk-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+				<Reference type="Package" SpecificVersion="false" refto="glib-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+				<Reference type="Package" SpecificVersion="false" refto="glade-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+				<Reference type="Package" SpecificVersion="false" refto="pango-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+				<Reference type="Package" SpecificVersion="false" refto="atk-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
 			</References>
 			<Files>
 				<File name="Program.fs" AddStandardHeader="true">
-					<![CDATA[module ${Namespace}.Logic]]> 
+					<![CDATA[namespace ${Namespace}.Logic
+    module Numbers =                    
+        let countTo n = [1..n] |> List.iter (fun x -> printfn "%d" x)]]> 
 				</File>
 			</Files>
 		</Project>
