--- a/MonoDevelop.FSharpBinding/templates/FSharpGtkProject.xpt.xml
+++ b/MonoDevelop.FSharpBinding/templates/FSharpGtkProject.xpt.xml
@@ -3,14 +3,14 @@
 <Template originator="Ihor Sihuta" created="2012/08/05">
 
 	<TemplateConfiguration>
-		<_Name>C#F# Gtk project</_Name>
-		<_Description>Create C# Gtk and F# library projects</_Description>
+		<_Name>F# Gtk# 2.0 project</_Name>
+		<_Description>Create F# Gtk# 2.0 and F# library projects</_Description>
 		<_Category>F#</_Category>
 		<LanguageName>F#</LanguageName>
 	</TemplateConfiguration>
 	
 	<Actions>
-		<Open filename="Main.cs" />
+		<Open filename="Main.fs" />
 		<Open filename="Program.fs" />
 	</Actions>
 	
@@ -20,7 +20,7 @@
 		</Options>
 
 		<Project name = "${ProjectName}" directory = ".">
-			<Options Target = "WinExe" language="C#" />
+			<Options Target = "WinExe" />
 
 			<References>
 				<Reference type="Package" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
@@ -36,7 +36,7 @@
 
 			<!-- A window template -->
 
-				<Widget>
+				<!--<Widget>
 					<SteticTemplate>
 					  <widget class="Gtk.Window" id="MainWindow" design-size="400 300">
 					    <property name="Title" translatable="yes">${Name}</property>
@@ -46,58 +46,56 @@
 				          <placeholder />
 				        </child>
 					  </widget>			
-					</SteticTemplate>
+					</SteticTemplate>-->
 
 					<!-- Class bound to the window -->
 
-					<File name="MainWindow.cs" AddStandardHeader="True">
-<![CDATA[using System;
-using Gtk;
+					<File name="MainWindow.fs" AddStandardHeader="True">
+<![CDATA[namespace ${ProjectName}
 
-public partial class MainWindow: Gtk.Window
-{	
-	public MainWindow (): base (Gtk.WindowType.Toplevel)
-	{
-		Build ();
-	}
-	
-	protected void OnDeleteEvent (object sender, DeleteEventArgs a)
-	{
-		Application.Quit ();
-		a.RetVal = true;
-	}
-}]]>
-					</File>
-				</Widget>
+    module MainWindow =
+    
+        open System
+        open Gtk;
+
+        type MyWindow() as this =
+            inherit Window("MyWindow")
+            
+            do
+                this.SetDefaultSize(400,300)
+                this.DeleteEvent.AddHandler(fun o e -> this.OnDeleteEvent(o,e))
+                this.ShowAll()
+            
+            member this.OnDeleteEvent(o,e:DeleteEventArgs) = 
+                Application.Quit ()
+                e.RetVal <- true]]></File>
+				<!--</Widget>-->
 
 				<!-- The main class -->
 
-				<File name="Main.cs" AddStandardHeader="True">
-<![CDATA[using System;
-using Gtk;
+				<File name="Main.fs" AddStandardHeader="True">
+<![CDATA[namespace ${ProjectName}
 
-namespace ${Namespace}
-{
-	class MainClass
-	{
-		public static void Main (string[] args)
-		{
-			Application.Init ();
-			MainWindow win = new MainWindow ();
-			win.Show ();
-			Application.Run ();
-		}
-	}
-}]]>
+module MainWindow =
+
+    open System;
+    open Gtk;
+
+    type MainClass = 
+            static member Main() = 
+                Application.Init()
+                let mutable win = new Window(WindowType.Toplevel)
+                win.Show()
+                Application.Run()]]>
 				</File>
 
-				<FileTemplateReference TemplateID="CSharpAssemblyInfo" name="AssemblyInfo.cs" />
+				<FileTemplateReference TemplateID="FSharpAssemblyInfo" name="AssemblyInfo.fs" />
 			</Files>
 		</Project>
 		<Project name="${ProjectName}.Logic" directory="${ProjectName}.Logic">
 			<Options>
                 <Target>Library</Target>
-                <Language>F#</Language>
+                <!--<Language>F#</Language>-->
             </Options>
 			<References>
 				<Reference type="Gac" refto="System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
