--- a/MonoDevelop.FSharpBinding/templates/AssemblyInfo.xft.xml
+++ b/MonoDevelop.FSharpBinding/templates/AssemblyInfo.xft.xml
@@ -24,28 +24,24 @@
             <![CDATA[open System.Reflection
 open System.Runtime.CompilerServices
 
-' Information about this assembly is defined by the following attributes. 
-' Change them to the values specific to your project.
 
-<assembly: AssemblyTitle("${ProjectName}")>
-<assembly: AssemblyDescription("")>
-<assembly: AssemblyConfiguration("")>
-<assembly: AssemblyCompany("")>
-<assembly: AssemblyProduct("")>
-<assembly: AssemblyCopyright("")>
-<assembly: AssemblyTrademark("")>
-<assembly: AssemblyCulture("")>
+[<assembly: AssemblyTitle("${ProjectName}")>]
+[<assembly: AssemblyDescription("")>]
+[<assembly: AssemblyConfiguration("")>]
+[<assembly: AssemblyCompany("${AuthorCompany}")>]
+[<assembly: AssemblyProduct("")>]
+[<assembly: AssemblyCopyright("${AuthorCopyright}")>]
+[<assembly: AssemblyTrademark("${AuthorTrademark}")>]
 
-' The assembly version has the format "{Major}.{Minor}.{Build}.{Revision}".
-' If the build and revision are set to '*' they will be updated automatically.
+(* The assembly version has the format {Major}.{Minor}.{Build}.{Revision}
+ If the build and revision are set to '*' they will be updated automatically.*)
 
-<assembly: AssemblyVersion("1.0.0.0")>
+[<assembly: AssemblyVersion("1.0.0.0")>]
 
-' The following attributes are used to specify the signing key for the assembly, 
-' if desired. See the Mono documentation for more information about signing.
+[<assembly: AssemblyDelaySign(false)>]
+[<assembly: AssemblyKeyFile("")>]
 
-<assembly: AssemblyDelaySign(false)>
-<assembly: AssemblyKeyFile("")>
+()
 ]]></File>
     </TemplateFiles>
 </Template>
