--- a/MonoDevelop.FSharpBinding/templates/FSharpGtkProject.xpt.xml
+++ b/MonoDevelop.FSharpBinding/templates/FSharpGtkProject.xpt.xml
@@ -11,6 +11,7 @@
 	
 	<Actions>
 		<Open filename="Main.fs" />
+        <Open filename="MainWindow.fs" />
 		<Open filename="Program.fs" />
 	</Actions>
 	
