--- a/MonoDevelop.FSharpBinding/templates/FSharpConsoleProject.xpt.xml
+++ b/MonoDevelop.FSharpBinding/templates/FSharpConsoleProject.xpt.xml
@@ -25,6 +25,7 @@
       <Options ExternalConsole="True"/>
       <References>
         <Reference type="Gac" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+        <Reference type="Gac" refto="System.Numerics, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       </References>
       <Files>
         <File name = "Program.fs" AddStandardHeader="True"><![CDATA[module Program
