--- a/MonoDevelop.FSharpBinding/templates/FSharpLibraryProject.xpt.xml
+++ b/MonoDevelop.FSharpBinding/templates/FSharpLibraryProject.xpt.xml
@@ -24,8 +24,8 @@
     <Project name = "${ProjectName}" directory = ".">
       <Options Target="Library" PauseConsole="False"/>
       <References>
-        <Reference type="Gac"  refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-		<Reference type="Package" refto="FSharp.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+        <Reference type="Gac" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+        <Reference type="Gac" refto="System.Numerics, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
 		</Reference>	
       </References>
       <Files>
