--- a/MonoDevelop.FSharpBinding/templates/AssemblyInfo.xft.xml
+++ b/MonoDevelop.FSharpBinding/templates/AssemblyInfo.xft.xml
@@ -21,7 +21,8 @@
     <!-- Template Content -->
     <TemplateFiles>
         <File name="AssemblyInfo.fs" AddStandardHeader="True">
-            <![CDATA[open System.Reflection
+            <![CDATA[module ${ProjectName}.AssemblyInfo
+open System.Reflection
 open System.Runtime.CompilerServices
 
 
@@ -33,13 +34,12 @@ open System.Runtime.CompilerServices
 [<assembly: AssemblyCopyright("${AuthorCopyright}")>]
 [<assembly: AssemblyTrademark("${AuthorTrademark}")>]
 
-(* The assembly version has the format {Major}.{Minor}.{Build}.{Revision}
- If the build and revision are set to '*' they will be updated automatically.*)
+// The assembly version has the format {Major}.{Minor}.{Build}.{Revision}
 
 [<assembly: AssemblyVersion("1.0.0.0")>]
 
-[<assembly: AssemblyDelaySign(false)>]
-[<assembly: AssemblyKeyFile("")>]
+//[<assembly: AssemblyDelaySign(false)>]
+//[<assembly: AssemblyKeyFile("")>]
 
 ()
 ]]></File>
