--- a/MonoDevelop.FSharpBinding/templates/FSharpConsoleProject.xpt.xml
+++ b/MonoDevelop.FSharpBinding/templates/FSharpConsoleProject.xpt.xml
@@ -28,6 +28,7 @@
         <Reference type="Gac" refto="System.Numerics, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       </References>
       <Files>
+        <FileTemplateReference TemplateID="FSharpAssemblyInfo" name="AssemblyInfo.fs" />
         <File name = "Program.fs" AddStandardHeader="True"><![CDATA[module Program
 
 open System
@@ -35,7 +36,6 @@ open System
 do
   Console.WriteLine("Hello world!")
 ]]></File>
-<!--        <FileTemplateReference TemplateID="VBAssemblyInfo" name="AssemblyInfo.vb" />-->
       </Files>
     </Project>
   </Combine>
