--- a/MonoDevelop.FSharpBinding/templates/FSharpConsoleProject.xpt.xml
+++ b/MonoDevelop.FSharpBinding/templates/FSharpConsoleProject.xpt.xml
@@ -3,9 +3,9 @@
 
   <!-- Template Header -->
   <TemplateConfiguration>
-    <_Name>Console Project</_Name>
+    <_Name>F# 3.0 Console Project</_Name>
     <Icon>md-project-console|res:fsharp-icon-32.png</Icon>
-    <_Description>Create a console F# project</_Description>
+    <_Description>Create an F# 3.0 console project for .NET 4.5. NOTE: you may have to manually set the target framework after creating the project. This is a known bug.</_Description>
     <_Category>F#</_Category>
     <LanguageName>F#</LanguageName>
   </TemplateConfiguration>
@@ -22,10 +22,12 @@
     </Options>
 
     <Project name = "${ProjectName}" directory = ".">
-      <Options ExternalConsole="True"/>
+      <Options ExternalConsole="True" TargetFrameworkVersion="4.0" />
       <References>
-        <Reference type="Gac" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-        <Reference type="Gac" refto="System.Numerics, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+        <Reference type="Gac" refto="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        <Reference type="Gac" refto="System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+        <Reference type="Gac" refto="System.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+        <Reference type="Gac" refto="System.Numerics, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       </References>
       <Files>
         <FileTemplateReference TemplateID="FSharpAssemblyInfo" name="AssemblyInfo.fs" />
@@ -33,8 +35,12 @@
 
 open System
 
-do
-  Console.WriteLine("Hello world!")
+let someFunction x y = x + y
+
+[<EntryPoint>]
+let main args = 
+    Console.WriteLine("Hello world!")
+    0
 ]]></File>
       </Files>
     </Project>
