--- a/MonoDevelop.FSharpBinding/templates/FSharpLibraryProject.xpt.xml
+++ b/MonoDevelop.FSharpBinding/templates/FSharpLibraryProject.xpt.xml
@@ -3,16 +3,16 @@
 
   <!-- Template Header -->
   <TemplateConfiguration>
-    <_Name>Library Project</_Name>
+    <_Name>F# 3.0 Library Project</_Name>
     <Icon>md-project-library|res:fsharp-icon-32.png</Icon>
-    <_Description>Create a F# library project</_Description>
+    <_Description>Create an F# 3.0 library project for .NET 4.0/4.5. NOTE: you may have to manually set the target framework after creating the project. This is a known bug.</_Description>
     <_Category>F#</_Category>
     <LanguageName>F#</LanguageName>
   </TemplateConfiguration>
 
   <!-- Actions -->
   <Actions>
-    <Open filename = "Lib.fs"/>
+    <Open filename = "Component1.fs"/>
   </Actions>
 
   <!-- Template Content -->
@@ -22,14 +22,16 @@
     </Options>
 
     <Project name = "${ProjectName}" directory = ".">
-      <Options Target="Library" PauseConsole="False"/>
+      <Options Target="Library" TargetFrameworkVersion="4.0" PauseConsole="False"/>
       <References>
-        <Reference type="Gac" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-        <Reference type="Gac" refto="System.Numerics, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />	
+        <Reference type="Gac" refto="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        <Reference type="Gac" refto="System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+        <Reference type="Gac" refto="System.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+        <Reference type="Gac" refto="System.Numerics, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />	
       </References>
       <Files>
         <FileTemplateReference TemplateID="FSharpAssemblyInfo" name="AssemblyInfo.fs" />
-        <File name = "Lib.fs" AddStandardHeader="True"><![CDATA[module ${ProjectName}.Library1
+        <File name = "Component1.fs" AddStandardHeader="True"><![CDATA[module ${ProjectName}.Library1
 
 module UtilityModule =
     let utilityFunction() = 1 + 1
