--- a/MonoDevelop.FSharpBinding/templates/EmptyFSharpScript.xft.xml
+++ b/MonoDevelop.FSharpBinding/templates/EmptyFSharpScript.xft.xml
@@ -3,7 +3,7 @@
   <TemplateConfiguration>
     <_Name>F# Script File</_Name>
     <Icon>md-text-file-icon|md-fs-script32</Icon>
-    <_Description>Creates an empty F# Interactive script file.</_Description>
+    <_Description>Creates an empty F# script file.</_Description>
 
     <!--This would create F#/General, which is a bit annoying if we have just two simple templates
     <_Category>General</_Category>
