--- a/MonoDevelop.FSharpBinding/templates/FSharpLibraryProject.xpt.xml
+++ b/MonoDevelop.FSharpBinding/templates/FSharpLibraryProject.xpt.xml
@@ -24,6 +24,7 @@
     <Project name = "${ProjectName}" directory = ".">
       <Options Target="Library" TargetFrameworkVersion="4.0" PauseConsole="False"/>
       <References>
+        <Reference type="Gac" refto="mscorlib" />
         <Reference type="Gac" refto="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
         <Reference type="Gac" refto="System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
         <Reference type="Gac" refto="System.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
