--- a/main/src/addins/CSharpBinding/templates/ConsoleProject.xpt.xml
+++ b/main/src/addins/CSharpBinding/templates/ConsoleProject.xpt.xml
@@ -24,10 +24,14 @@
 		</Options>
 		
 		<Project name = "${ProjectName}" directory = ".">
-			<Options ExternalConsole="True"/>
-			<References>
-				<Reference type="Package" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-			</References>
+            <Options ExternalConsole="True" TargetFrameworkVersion = "4.0"/>
+            <References>
+                <Reference type="Package" refto="System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+                <Reference type="Package" refto="System.Xml, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+                <Reference type="Package" refto="System.Core" />
+                <Reference type="Package" refto="System.Xml.Linq" />
+                <Reference type="Package" refto="Microsoft.CSharp, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+            </References>
 			<Files>
 				<File name="Program.cs" AddStandardHeader="True"><![CDATA[using System;
 
