First batch of default filenames updates. Also, modified so if the text box is the last default template, replace with blank text.

--- a/main/src/addins/CSharpBinding/templates/PortableLibrary.xpt.xml
+++ b/main/src/addins/CSharpBinding/templates/PortableLibrary.xpt.xml
@@ -10,6 +10,7 @@
 		<Icon>md-project-library|res:csharp-icon-32.png</Icon>
 		<LanguageName>C#</LanguageName>
 		<_Description>Creates a C# library that can be used in Windows, Silverlight, Windows Phone, Xbox 360, MonoTouch and Mono for Android.</_Description>
+		<DefaultFilename>PortableLibrary</DefaultFilename>
 	</TemplateConfiguration>
 	
 	<!-- Actions -->
