--- a/main/src/addins/CSharpBinding/templates/ConsoleProject.xpt.xml
+++ b/main/src/addins/CSharpBinding/templates/ConsoleProject.xpt.xml
@@ -10,6 +10,7 @@
 		<Icon>md-project-console|res:csharp-icon-32.png</Icon>
 		<LanguageName>C#</LanguageName>
 		<_Description>Creates a new C# console project.</_Description>
+		<DefaultFilename>ConsoleProject</DefaultFilename>
 	</TemplateConfiguration>
 	
 	<!-- Actions -->
