--- a/main/src/addins/CSharpBinding/templates/GtkSharp2Project.xpt.xml
+++ b/main/src/addins/CSharpBinding/templates/GtkSharp2Project.xpt.xml
@@ -10,6 +10,7 @@
 		<Icon>md-project-gui|res:csharp-icon-32.png</Icon>
 		<LanguageName>C#</LanguageName>
 		<_Description>Creates a Gtk# 2.0 project.</_Description>
+		<DefaultFilename>GtkSharpProject</DefaultFilename>
 	</TemplateConfiguration>
 	
 	<!-- Actions -->
