--- a/main/src/addins/MonoDevelop.GtkCore/templates/WindowPartial.xft.xml
+++ b/main/src/addins/MonoDevelop.GtkCore/templates/WindowPartial.xft.xml
@@ -8,6 +8,7 @@
 		<LanguageName>*</LanguageName>
 		<ProjectType>DotNet</ProjectType>
 		<_Description>Creates a Gtk Window</_Description>
+		<DefaultFilename>WindowPartial</DefaultFilename>
 	</TemplateConfiguration>
 	
 	<Conditions>
