--- a/main/src/addins/MonoDevelop.GtkCore/templates/Widget.xft.xml
+++ b/main/src/addins/MonoDevelop.GtkCore/templates/Widget.xft.xml
@@ -8,6 +8,7 @@
 		<LanguageName>*</LanguageName>
 		<ProjectType>DotNet</ProjectType>
 		<_Description>Creates a custom Gtk Widget.</_Description>
+		<DefaultFilename>Widget</DefaultFilename>
 	</TemplateConfiguration>
 	
 	<Conditions>
