Minor issue fixup here.

--- a/main/src/addins/MonoDevelop.GtkCore/templates/ActionGroupPartial.xft.xml
+++ b/main/src/addins/MonoDevelop.GtkCore/templates/ActionGroupPartial.xft.xml
@@ -8,7 +8,7 @@
 		<LanguageName>*</LanguageName>
 		<ProjectType>DotNet</ProjectType>
 		<_Description>Creates a global Action Group.</_Description>
-		<DefaultFilename>ActionGroupPartial</DefaultFilename>
+		<DefaultFilename>ActionGroup</DefaultFilename>
 	</TemplateConfiguration>
 	
 	<Conditions>
