--- a/main/src/addins/MonoDevelop.GtkCore/templates/DialogPartial.xft.xml
+++ b/main/src/addins/MonoDevelop.GtkCore/templates/DialogPartial.xft.xml
@@ -8,7 +8,7 @@
 		<LanguageName>*</LanguageName>
 		<ProjectType>DotNet</ProjectType>
 		<_Description>Creates a Gtk dialog.</_Description>
-		<DefaultFilename>DialogPartial</DefaultFilename>
+		<DefaultFilename>Dialog</DefaultFilename>
 	</TemplateConfiguration>
 	
 	<Conditions>
