--- a/main/src/addins/MonoDevelop.GtkCore/templates/WidgetPartial.xft.xml
+++ b/main/src/addins/MonoDevelop.GtkCore/templates/WidgetPartial.xft.xml
@@ -8,7 +8,7 @@
 		<LanguageName>*</LanguageName>
 		<ProjectType>DotNet</ProjectType>
 		<_Description>Creates a custom Gtk Widget.</_Description>
-		<DefaultFilename>WidgetPartial</DefaultFilename>
+		<DefaultFilename>Widget</DefaultFilename>
 	</TemplateConfiguration>
 	
 	<Conditions>
